<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content_description">Image</string>
    <string name="Rs">\u20B9</string>
    <string name="currency_text">Rs.</string>
    <string name="rupee_symbol">₹</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_products">Products</string>
    <string name="navigation_orders">Orders</string>
    <string name="navigation_customers">Customers</string>
    <string name="navigation_brands">Brands</string>
    <string name="navigation_category">Category</string>
    <string name="navigation_subcategory">SubCategory</string>
    <string name="navigation_suppliers">Suppliers</string>
    <string name="navigation_employees">Employees</string>
    <string name="navigation_vouchers">Vouchers</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_customer_promotion">Customer Promotion</string>
    <string name="navigation_stock_transfer">Stock Transfer</string>
    <string name="navigation_stock_taking">Stock Taking</string>
    <string name="navigation_profile">My Profile</string>
    <string name="navigation_access">Access</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_change_password">Change Password</string>
    <string name="navigation_logout">Logout</string>
    <string name="navigation_delivery">Set delivery</string>
    <string name="navigation_store_details">Store details</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string-array name="countries">
        <item>+91</item>
        <item>+971</item>
    </string-array>
    <string-array name="payment_type">
        <item>Cash</item>
        <item>Credit / Debit Card</item>
        <item>Wallet</item>
        <item>Voucher</item>
    </string-array>
    <string-array name="duration">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last 7 Days</item>
        <item>Last 30 Days</item>
        <item>This Month</item>
        <item>Last Month</item>
        <item>Custom</item>
    </string-array>
    <string-array name="sales_return">
        <item>Sales</item>
        <item>Return</item>
    </string-array>
    <string-array name="colors">
        <item>#009688</item>
        <item>#00bfa5</item>
        <item>#4caf50</item>
        <item>#00c853</item>
        <item>#8bc34a</item>
        <item>#64dd17</item>
        <item>#aeea00</item>
        <item>#cddc39</item>
        <item>#ffeb3b</item>
        <item>#ffc107</item>
        <item>#ff9800</item>
        <item>#ff6d00</item>
        <item>#f44336</item>
        <item>#d50000</item>
        <item>#e91e63</item>
        <item>#c51162</item>
        <item>#ce93d8</item>
        <item>#9c27b0</item>
        <item>#aa00ff</item>
        <item>#6200ea</item>
        <item>#3f51b5</item>
        <item>#2962ff</item>
        <item>#03a9f4</item>
        <item>#90caf9</item>
        <item>#00bcd4</item>
        <item>#607d8b</item>
        <item>#37474f</item>
        <item>#bcaaa4</item>
        <item>#9e9e9e</item>
        <item>#795548</item>
    </string-array>
    <string name="prompt_email">Enter your email id</string>
    <string name="prompt_phone">Enter your mobile no.</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Phone number</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_otp">Enter your verification code</string>
    <string name="prompt_choose_password">Choose a Password</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign up</string>
    <string name="action_choose_password">Choose a Password</string>
    <string name="action_register">Register</string>
    <string name="action_verify">Verify</string>
    <string name="action_set_password">Set Password</string>
    <string name="action_forgot">Forgot</string>
    <string name="action_next">Next</string>
    <string name="action_search">Search</string>
    <string name="action_done">Done</string>
    <string name="error_invalid_phone_no">This phone number is invalid</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_short">Minimum length of the password should be 6 characters.</string>
    <string name="error_password_long">Length of the password should be between 6 and 10 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_otp">This otp is incorrect</string>
    <string name="error_no_barcode">No Barcode Selected</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing phone number completions."</string>
    <string name="permission_rationale_location">"Location permissions are needed for providing prefill location details."</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid LatLng used.</string>
    <string name="address_found">Address Found</string>
    <string name="no_address_found">No Address Found</string>
    <string name="termsncondition1"><![CDATA[<font color="#b1cce780">By logging in to this app, you agree to our </font>]]></string>
    <string name="termsncondition2"><![CDATA[<u><font color="#3e435c">Terms &amp; Conditions</font></u>]]></string>
    <string name="privacypolicy"><![CDATA[<u><font color="#3e435c">Privacy Policy</font></u>]]></string>
    <string name="storename">Enter your store name</string>
    <string name="storecat">Store Category</string>
    <string name="title_activity_add_brand">Add Brand</string>
    <string name="title_activity_edit_brand">Edit Brand</string>
    <string name="title_activity_brand">Brand</string>
    <string name="title_activity_barcode_capture">Billing</string>
    <string name="title_activity_orders_details">Orders</string>
    <string name="title_activity_order_scan_product">Billing</string>
    <string name="title_activity_place_order">Billing</string>
    <string name="title_activity_place_order_customise_price">Billing</string>
    <string name="title_activity_place_order_cust_emp">Billing</string>
    <string name="title_activity_payment_method">Billing</string>
    <string name="title_activity_invoice">Billing</string>
    <string name="title_activity_mix_payment">Mix Payment</string>
    <string name="title_activity_return">Return Product</string>
    <string name="title_add_to_cart">Add to cart</string>
    <string name="title_cart">Cart</string>
    <string name="title_checkout">Checkout</string>
    <string name="checkout_use_wallet_balance">Use Wallet balance</string>
    <string name="title_activity_add_customer">Add Customer</string>
    <string name="title_activity_edit_customer">Edit Customer</string>
    <string name="title_activity_customer">Customer</string>
    <string name="title_activity_add_employee">Add Employee</string>
    <string name="title_activity_edit_employee">Edit Employee</string>
    <string name="title_activity_add_employee_password">Employee Password Setting</string>
    <string name="title_activity_add_employee_permissions">Employee Access</string>
    <string name="title_activity_employee">Employee</string>
    <string name="title_activity_product">Product Details</string>
    <string name="title_activity_add_product_selection">Select Type</string>
    <string name="title_activity_add_product">Product Details</string>
    <string name="title_activity_add_product_price">Add Price &amp; Quantity</string>
    <string name="title_activity_add_product_bulk">Start Bulk Process</string>
    <string name="title_activity_add_product_select_categories">Add Product</string>
    <string name="title_activity_add_product_bulk_confirmation">Confirmation</string>
    <string name="title_activity_product_edit">Edit Product</string>
    <string name="title_activity_add_product_new_flow">Add Product</string>
    <string name="title_activity_add_product_new_price">Add Product</string>
    <string name="title_activity_add_product_new_size_qty">Add Product</string>
    <string name="title_activity_add_product_new_barcode_selection">Add Product</string>
    <string name="title_activity_add_product_new_bar_avail">Add Product</string>
    <string name="title_activity_add_product_new_bar_not_avail">Add Product</string>
    <string name="title_activity_edit_store">Edit Store</string>
    <string name="title_activity_edit_profile">My Profile</string>
    <string name="title_activity_crash_logs">Crashlogs</string>
    <string name="title_activity_store">Store</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_sign_up">Welcome</string>
    <string name="title_activity_sign_up_header">Sign Up</string>
    <string name="title_activity_permissions">Permissions</string>
    <string name="title_activity_set_password">Set Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_owner_employee">Owner Or Employee</string>
    <string name="title_activity_add_store">Add Store</string>
    <string name="title_activity_add_supplier">Add Supplier</string>
    <string name="title_activity_edit_supplier">Edit Supplier</string>
    <string name="title_activity_supplier">Supplier</string>
    <string name="title_activity_splach_screen">Splach Screen</string>
    <string name="title_activity_tour">Tour</string>
    <string name="title_activity_voucher">Voucher</string>
    <string name="title_activity_add_voucher">Add Voucher</string>
    <string name="title_activity_edit_voucher">Edit Voucher</string>
    <string name="title_activity_scan_card">Scan Card</string>
    <string name="title_activity_maps">Select Store Location</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_user_profile">My Profile</string>
    <string name="title_activity_invoice_settings">Invoice Settings</string>
    <string name="title_activity_detailed_graph">Detailed Graph</string>
    <string name="title_activity_terms_conditions">Terms and Conditions</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="enter_price_hint">Enter product price</string>
    <string name="enter_mrpprice_hint">Enter mrp</string>
    <string name="enter_qty_hint">Enter qty</string>
    <string name="general_use_submit">Submit</string>
    <string name="general_use_cancel">Cancel</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="store_setting_label_lock_customer_list">Lock Customer list</string>
    <string name="store_setting_desc_lock_customer_list">Lock your customer list and choose who can place and order</string>
    <string name="store_setting_label_delivery_options">Set delivery options</string>
    <string name="store_setting_label_store_details">View store details</string>
    <string name="store_settings">Store Settings</string>
    <string name="log_out">Log Out</string>
    <string name="store_setting_store_images">Store Images</string>
    <string name="store_setting_category_images">Category Images</string>
    <string name="store_setting_item_images">Item Images</string>
    <string name="store_setting_label_change_language">Change language</string>
</resources>