<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center">



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_3fourth"
        android:paddingBottom="@dimen/padding_small"
        android:minWidth="250dp"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/rect_filled_413d3d_corner_6dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inflate_order_title"
            style="@style/font_medium_18_white"
            tools:text="Order has been edited."
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inflate_enter_price_edt"
            style="@style/font_medium_14_white"
            android:inputType="numberDecimal"
            android:layout_margin="@dimen/margin_small"
            android:padding="8dp"
            android:background="@drawable/rect_corner_3dp_border_898989_1dp"
            android:hint="@string/enter_price_hint"
            android:maxLines="3"
            android:textColorHint="@color/color_898989"
            tools:text=""/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inflate_enter_mrp_edt"
            style="@style/font_medium_14_white"
            android:inputType="numberDecimal"
            android:layout_margin="@dimen/margin_small"
            android:padding="8dp"
            android:background="@drawable/rect_corner_3dp_border_898989_1dp"
            android:hint="@string/enter_mrpprice_hint"
            android:maxLines="3"
            android:textColorHint="@color/color_898989"
            tools:text=""/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inflate_enter_qty_edt"
            style="@style/font_medium_14_white"
            android:inputType="numberDecimal"
            android:layout_margin="@dimen/margin_small"
            android:padding="8dp"
            android:background="@drawable/rect_corner_3dp_border_898989_1dp"
            android:hint="@string/enter_qty_hint"
            android:maxLines="3"
            android:textColorHint="@color/color_898989"
            tools:text=""/>



        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/inflate_enter_price_cancel_tv"
                android:background="@drawable/rect_filled_191919_corner_6dp"
                android:layout_height="wrap_content"
                android:text="@string/general_use_cancel"
                style="@style/font_medium_14_white"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin_small"
                android:gravity="center"
                android:paddingTop="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                />


            <TextView
                android:layout_width="match_parent"
                android:background="@drawable/rect_filled_191919_corner_6dp"
                android:layout_height="wrap_content"
                android:id="@+id/inflate_enter_price_submit_tv"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/general_use_submit"
                android:gravity="center"
                style="@style/font_medium_14_white"
                android:layout_weight="1"
                android:paddingTop="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout >