<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/fragment_store"
    android:background="@color/view_bg_mbasket">



  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/color_toolbar"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Store Settings"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="18dp"
        style="@style/ToolbarStyle"
        android:layout_marginLeft="20dp"
        android:background="@color/color_toolbar"
        android:layout_gravity="center"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/rect_corner_3dp_border_898989_1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:padding="@dimen/padding_normal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_medium_16_black"
                android:text="@string/store_setting_label_lock_customer_list"
                />

            <TextView
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_regular_12_hex717171"
                android:text="@string/store_setting_desc_lock_customer_list"
                />

        </LinearLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:paddingStart="@dimen/margin_large"
            android:paddingLeft="@dimen/margin_large"
            android:paddingRight="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:paddingTop="@dimen/margin_very_small"
            android:layout_width="wrap_content"
            android:gravity="top"
            android:id="@+id/fragment_store_setting_switch_loc"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:background="@drawable/rect_corner_3dp_border_898989_1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:id="@+id/_frag_store_setting_ll_delivery_options"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="@dimen/padding_normal"
            android:layout_height="wrap_content"
            style="@style/font_medium_16_black"
            android:text="@string/store_setting_label_delivery_options"
            />

        <ImageView
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_36dp"/>

    </LinearLayout>


    <LinearLayout
        android:background="@drawable/rect_corner_3dp_border_898989_1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:id="@+id/_frag_store_setting_ll_change_language"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="@dimen/padding_normal"
            android:layout_height="wrap_content"
            style="@style/font_medium_16_black"
            android:text="@string/store_setting_label_change_language"
            />

        <ImageView
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_36dp"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/rect_corner_3dp_border_898989_1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:id="@+id/_frag_store_setting_ll_store_details"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="@dimen/padding_normal"
            android:layout_height="wrap_content"
            style="@style/font_medium_16_black"
            android:text="@string/store_setting_label_store_details"
            />

        <ImageView
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_36dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/rect_corner_3dp_border_898989_1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:padding="@dimen/padding_normal"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                style="@style/font_medium_16_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/store_setting_store_images" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_store_setting_switch_store_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:paddingTop="@dimen/margin_very_small" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragment_store_setting_rel_cat_images"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_medium_16_black"
                android:layout_centerVertical="true"
                android:text="@string/store_setting_category_images"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:id="@+id/fragment_store_setting_switch_cat_images"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragment_store_setting_rel_item_images"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_medium_16_black"
                android:layout_centerVertical="true"
                android:text="@string/store_setting_item_images"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/margin_very_small"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:id="@+id/fragment_store_setting_switch_item_images"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </LinearLayout>



    </LinearLayout>



</LinearLayout>
